# watcher

./: CMakeLists.txt  LICENSE  make_clean.bat  make_clean.sh
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  cmake-multi-platform.yml
src/: dmon.h  watcher_plus.c  watcher_plus.h
